# pyxindy

./: .gitignore  CHANGELOG.md  LICENSE  MIGRATION.md  PLAN.md  README.md  TODO.md  main.py  mkdocs.yml  pyproject.toml  tests_paths.py  versions.json
.github/workflows/: ci.yml
0.0.3/: 404.html  objects.inv  sitemap.xml
0.0.3/about/: index.html
0.0.3/features/: index.html
0.0.3/manual/: index.html
0.0.3/manual/by-topic/: index.html
0.0.3/manual/command-reference/: index.html
0.0.3/manual/doc-readme/: index.html
0.0.3/manual/how-the-index-processor-works/: index.html
0.0.3/manual/invoking-xindy/: index.html
0.0.3/manual/processing-phases/: index.html
0.0.3/manual/references/: index.html
0.0.3/search/: search_index.json
0.0.3/tutorial/: index.html
0.0.3/tutorial/about-xindy/: index.html
0.0.3/tutorial/advanced-features/: index.html
0.0.3/tutorial/basic-introduction/: index.html
0.0.3/tutorial/tutorial-references/: index.html
0.0.4/: 404.html  sitemap.xml
0.0.4/home/: index.html
0.0.4/home/about/: index.html
0.0.4/home/features/: index.html
0.0.4/manual/: index.html
0.0.4/manual/by-topic/: index.html
0.0.4/manual/command-reference/: index.html
0.0.4/manual/doc-readme/: index.html
0.0.4/manual/how-the-index-processor-works/: index.html
0.0.4/manual/invoking-xindy/: index.html
0.0.4/manual/processing-phases/: index.html
0.0.4/manual/references/: index.html
0.0.4/search/: search_index.json
0.0.4/tutorial/: index.html
0.0.4/tutorial/about-xindy/: index.html
0.0.4/tutorial/advanced-features/: index.html
0.0.4/tutorial/basic-introduction/: index.html
0.0.4/tutorial/tutorial-references/: index.html
0.0.5/: 404.html  index.html  sitemap.xml
0.0.5/css/: extra.css
0.0.5/home/: index.html
0.0.5/home/about/: index.html
0.0.5/home/features/: index.html
0.0.5/manual/: index.html
0.0.5/manual/by-topic/: index.html
0.0.5/manual/command-reference/: index.html
0.0.5/manual/doc-readme/: index.html
0.0.5/manual/how-the-index-processor-works/: index.html
0.0.5/manual/invoking-xindy/: index.html
0.0.5/manual/processing-phases/: index.html
0.0.5/manual/references/: index.html
0.0.5/search/: search_index.json
0.0.5/tutorial/: index.html
0.0.5/tutorial/about-xindy/: index.html
0.0.5/tutorial/advanced-features/: index.html
0.0.5/tutorial/basic-introduction/: index.html
0.0.5/tutorial/tutorial-references/: index.html
0.0.6/: 404.html  index.html  sitemap.xml
0.0.6/css/: extra.css
0.0.6/home/: index.html
0.0.6/home/about/: index.html
0.0.6/home/features/: index.html
0.0.6/manual/: index.html
0.0.6/manual/by-topic/: index.html
0.0.6/manual/command-reference/: index.html
0.0.6/manual/doc-readme/: index.html
0.0.6/manual/how-the-index-processor-works/: index.html
0.0.6/manual/invoking-xindy/: index.html
0.0.6/manual/processing-phases/: index.html
0.0.6/manual/references/: index.html
0.0.6/search/: search_index.json
0.0.6/tutorial/: index.html
docs/: about.md  features.md  index.md
docs/assets/: dataflow.drawio
docs/home/: about.md  index.md
docs/manual/: command-index.md  command-reference.md  doc-readme.md  how-the-index-processor-works.md  index.md  invoking-xindy.md  processing-phases.md  references.md
docs/tutorial/: about-xindy.md  advanced-features.md  basic-introduction.md  index.md  style1.xdy  style2.xdy  tutorial-references.md
latest/: 404.html  index.html
latest/about/: index.html
latest/features/: index.html
latest/home/: index.html
latest/manual/: index.html
latest/tutorial/: index.html
src/xindy/: __init__.py  __main__.py  cli.py
src/xindy/dsl/: __init__.py  (+2 more)
tests/: conftest.py  test_cli.py  test_cli_errors.py
tests/data/: crossref.raw  crossref.xdy  locclass-close.raw  locclass-close.xdy  makeidx_module.ind  makeidx_module.raw  markup-locref.raw  markup-locref.xdy  merge.raw  merge.xdy  modules_tex.ind  modules_tex.raw  modules_tex.xdy  simple.ind  simple.raw  simple.xdy  sort-rule.raw  sort-rule.xdy
tests/dsl/: test_builtin_modules_loading.py  test_require_modules.py  test_sexpr.py  test_style_interpreter.py
tests/index/: test_builder.py  test_grouping.py
tests/integration/: test_snapshot_attr1.py  test_snapshot_attr2.py  test_snapshot_attr3.py  test_snapshot_deep.py  test_snapshot_deutsch.py  test_snapshot_ex1.py  test_snapshot_ex2.py  test_snapshot_french.py  test_snapshot_infII.py  test_snapshot_makeidx_module.py  test_snapshot_mappings.py  test_snapshot_modules_tex.py  test_snapshot_ranges1.py  test_snapshot_simple.py  test_snapshot_wegweiser.py  test_snapshot_xref1.py  test_tutorial_docs.py
tests/locref/: test_locref.py
tests/markup/: test_renderer.py
tests/raw/: test_reader.py
tests/tex/: test_makeglossaries.py  test_makeindex4.py  test_tex2xindy.py  test_tex2xindy_cli.py
xindy-src/xindy-2.1/: ChangeLog  IMPNOTES  INSTALL  PROBLEMS  README
(+172 files in other folders)
