[project]
name = "xindy"
version = "0.1.0"
description = "Python port of the xindy (flexible index) processor."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
xindy = "xindy.cli:main"
tex2xindy = "xindy.tex.tex2xindy:main"
makeindex4 = "xindy.tex.makeindex4:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.5",
]

[tool.pytest.ini_options]
minversion = "8.3"
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py313"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I"]
