[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "pyxindy"
version = "0.1.0"
description = "Python port of the xindy (flexible index) processor."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["click>=8.1"]

[project.scripts]
xindy = "xindy.cli:main"
tex2xindy = "xindy.tex.tex2xindy:main"
makeindex4 = "xindy.tex.makeindex4:main"
makeglossaries = "xindy.tex.makeglossaries:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.5",
]

[tool.pytest.ini_options]
minversion = "8.3"
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src"]
extend-exclude = [
  ".venv",
  "venv",
  "build",
  "dist",
  "site",
  "docs/_build",
  "**/migrations",
  "vendor",
]
fix = true
unsafe-fixes = false

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true
docstring-code-line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
known-first-party = ["xindy"]
section-order = ["future","standard-library","third-party","first-party","local-folder"]
lines-after-imports = 2

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true
suppress-dummy-args = true
suppress-none-returning = true

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"src/xindy/cli.py" = ["B008"]
"**/__init__.py" = ["F401", "F403"]
"tests/**" = ["D", "T20", "S101", "ANN", "ARG002", "SLF001", "PT018", "ARG001", "TRY003"]

[tool.hatch.build.targets.wheel]
packages = ["src/xindy"]
force-include = {"src/xindy/_modules" = "xindy/_modules"}

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/src/xindy/_modules",
  "/README.md",
]
