[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pyxindy"
dynamic = ["version"]
description = "Python port of the xindy (flexible index) processor."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["click>=8.1"]

[project.scripts]
xindy-py = "xindy.cli:main"
texindy-py = "xindy.tex.tex2xindy:main"
makeindex-py = "xindy.tex.makeindex4:main"
makeglossaries-py = "xindy.tex.makeglossaries:main"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.1",
    "nox[pbs]>=2024.4.16",
    "pytest-cov>=7.0.0",
    "hatch>=1.12.0"
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-awesome-nav>=3.2.0",
    "mkdocs-material>=9.7.0",
    "mkdocstrings[python]>=1.0.0",
    "mike>=2.1.3",
]

[tool.pytest.ini_options]
minversion = "8.3"
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src"]
extend-exclude = [
  ".venv",
  "venv",
  "build",
  "dist",
  "site",
  "docs/_build",
  "**/migrations",
  "vendor",
]
fix = true
unsafe-fixes = false

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true
docstring-code-line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
known-first-party = ["xindy"]
section-order = ["future","standard-library","third-party","first-party","local-folder"]
lines-after-imports = 2

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true
suppress-dummy-args = true
suppress-none-returning = true

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"src/xindy/cli.py" = ["B008"]
"**/__init__.py" = ["F401", "F403"]
"tests/**" = ["D", "T20", "S101", "ANN", "ARG002", "SLF001", "PT018", "ARG001", "TRY003"]

[tool.hatch.build.targets.wheel]
packages = ["src/xindy"]
force-include = {"src/xindy/_modules" = "xindy/_modules"}

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/src/xindy/_modules",
  "/README.md",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"
